Wed Nov 20 20:54:01 2013  Masaya Tarui  <tarui@ruby-lang.org>

	* tool/instruction.rb : fix typo.

Wed Nov 20 19:45:22 2013  Tanaka Akira  <akr@fsij.org>

	* random.c (rand_init): Make it possible to specify arbitrary array
	  for init_genrand().

Wed Nov 20 17:34:13 2013  Koichi Sasada  <ko1@atdot.net>

	* parse.y (rb_gc_mark_symbols): set global_symbols.minor_marked only
	  when full_mark is 0.
	  rb_gc_mark_symbols() (with full_mark == 1) can be called by other
	  than GC (such as rb_objspace_reachable_objects_from_root()).

Wed Nov 20 11:46:38 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/json: merge JSON 1.8.1.
	  https://github.com/nurse/json/compare/002ac2771ce32776b32ccd2d06e5604de6c36dcd...e09ffc0d7da25d0393873936c118c188c78dbac3
	* Remove Rubinius exception since transcoding should be working now.
	* Fix https://github.com/flori/json/issues/162 reported by Marc-Andre
	  Lafortune <github_rocks@marc-andre.ca>. Thanks!
	* Applied patches by Yui NARUSE <naruse@airemix.jp> to suppress
	  warning with -Wchar-subscripts and better validate UTF-8 strings.
	* Applied patch by ginriki@github to remove unnecessary if.
	* Add load/dump interface to JSON::GenericObject to make
	  serialize :some_attribute, JSON::GenericObject
	  work in Rails active models for convenient
	  SomeModel#some_attribute.foo.bar access to serialised JSON data.

Wed Nov 20 01:39:02 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/constant.rb (RDoc::Constant#documented?): workaround for
	  NoMethodError when the original of alias is not found.

Wed Nov 20 01:27:33 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/delegate.rb (Delegator#send): separate from method_missing so
	  that super calls proper method.

Tue Nov 19 23:38:49 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (--with-os-version-style): option to transform target
	  OS version string.

Tue Nov 19 21:27:33 2013  Tanaka Akira  <akr@fsij.org>
